# satcomp

./: .gitignore  .gitmodules  CODEOWNERS  Dockerfile  Pipfile  README.md  README_bd.md  README_dev.md  benchmark.sh  bidirectional.py  bidirectional_bench.py  bidirectional_hdbn.py  bidirectional_solver.py  coverage_test.sh  get_prefix.py  left_refference.py  literal_manager.py  makesubmission.sh  minattractor.py  mysat.py  permutation.py  pyproject.toml  pyrightconfig.json  stralgo.py  submission.txt  tox.ini
.github/workflows/: check.yml  github-actions-demo.yml  github-actions-pyright.yml
data/artificial/: fibonacci.03  fibonacci.07  fibonacci.09  fibonacci.10  fibonacci.11  fibonacci.12  fibonacci.13  fibonacci.14  fibonacci.15  fibonacci.16  fibonacci.17  fibonacci.18  fibonacci.19  fibonacci.20  paperfold.02  paperfold.03  paperfold.04  paperfold.05  paperfold.06  paperfold.07  paperfold.08  paperfold.09  paperfold.10  paperfold.11  paperfold.12  paperfold.13  paperfold.14  paperfold.15  paperfold.16  paperfold.17  paperfold.18  paperfold.19  paperfold.20  perioddoubling.04  perioddoubling.08  perioddoubling.09  perioddoubling.10  perioddoubling.11  perioddoubling.12  perioddoubling.13  (+24 more)
data/calgary_pref/: bib-100  bib-150  bib-200  bib-250  bib-300  bib-350  bib-400  bib-450  bib-50  book1-100  book1-150  book1-200  book1-250  book1-300  book1-350  book1-400  book1-450  book1-50  book2-100  book2-150  book2-200  book2-250  book2-300  book2-350  book2-400  book2-450  book2-50  geo-100  geo-150  geo-200  geo-250  geo-300  geo-350  geo-400  geo-450  geo-50  news-100  news-150  news-200  news-250  (+111 more)
data/cantrbry_pref/: alice29.txt-100  alice29.txt-150  alice29.txt-200  alice29.txt-250  alice29.txt-300  alice29.txt-350  alice29.txt-400  alice29.txt-450  alice29.txt-50  asyoulik.txt-100  asyoulik.txt-150  asyoulik.txt-200  asyoulik.txt-250  asyoulik.txt-300  asyoulik.txt-350  asyoulik.txt-400  asyoulik.txt-450  asyoulik.txt-50  cp.html-100  cp.html-150  cp.html-200  cp.html-250  cp.html-300  cp.html-350  cp.html-400  cp.html-450  cp.html-50  fields.c-100  fields.c-150  fields.c-200  fields.c-250  fields.c-300  (+57 more)
rust/: Cargo.toml
rustr-master/: Cargo.toml  hoge.txt
shell/: concat_json.sh  example_run.sh  generate_slurmscripts.sh  genwcnf.sh  measure_datasets.sh  run_lzrr.sh  scheduler.sh  splitter.sh
src/: asp_minsubstr.py  attractor.py  attractor_bench.py  attractor_bench_format.py  attractor_naive.py  attractor_solver.py  attractor_verify.py  benchmark_common.py  bidirectional.py  bidirectional_bench.py  bidirectional_fast.py  bidirectional_naive.py  bidirectional_solver.py  bidirectional_solver_var0.py  bidirectional_solver_var1.py  bidirectional_solver_var2.py  bms.py  bms_bench.py  bms_decoder.py  bms_fast.py  bms_naive.py  bms_plus.py  bms_solver.py  bms_verify.py  csv2table.py  get_prefix.py  grammar_solver.py  left_refference.py  left_refference_test.py  literal_manager.py  logencode.py  lz77.py  lz_bench.py  min_attractor_bench.py  min_substr.py  minattractor.py  mysat.py  mytimer.py  period_doubling_sequence.py  permutation.py  (+9 more)
tests/: benchmark.py  err.tsv  size_check.py  size_list.tsv
(+49 files in other folders)
