[project]
name = "satcomp"
version = "0.1.0"
description = "Computing NP-hard Repetitiveness Measures via MAX-SAT"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "python-sat>=0.1.8.dev18",
    "matplotlib>=3.5.2",
    "sympy>=1.10.1",
    "dataclasses-json>=0.5.7",
    "joblib>=1.1.0",
    "pandas>=1.4.3",
    "numpy>=1.23.0",
    "tqdm>=4.64.0",
]

[dependency-groups]
dev = ["pyright>=1.1.256", "ruff>=0.14.11"]

[tool.uv]
default-groups = ["dev"]
cache-keys = [{ file = "pyproject.toml" }, { git = true }]


[tool.pyright]
venvPath = "."
venv = ".venv"
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportMissingParameterType = "error"
reportUnknownParameterType = "error"
reportUnknownReturnType = "error"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".git", ".github", "__pycache__", "rust", "shell", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "ANN"]
# E741 and ANN should be removed in the future.
ignore = ["E203", "E741", "ANN"]

[tool.ruff.lint.isort]
# order-by-type = false

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = false
suppress-none-returning = true
